# example-messaging-endpoint

./: .gitignore  .gitmodules  .prettierignore  DEVELOP.md  README.md  jest.config.json  package-lock.json  package.json
.cspell/: custom-dictionary.txt
.github/workflows/: aptos.yml  evm.yml  format.yml  svm.yml
aptos/: README.md  ci.sh
aptos/endpoint/: Move.toml
aptos/endpoint/sources/: bitmap.move  endpoint.move  integrator.move  universal_address.move
aptos/router/: Move.toml
aptos/router/sources/: bitmap.move  integrator.move  router.move  universal_address.move
evm/: .gitignore  README.md  foundry.toml
evm/script/: AddAdapter.s.sol  AddTransceiver.s.sol  DeployEndpoint.s.sol  DeployRouter.s.sol  DeployTestIntegrator.s.sol  ReceiveTestMessage.s.sol  SendTestMessage.s.sol  TestIntegrator.s.sol
evm/sdk/ts/: tsconfig.json
evm/sdk/ts/src/: contractABI.json
evm/sdk/ts/src/contracts/: Adapter.ts  Transceiver.ts  admin.ts  computeMessageDigest.ts  getMessageStatus.ts  messages.ts
evm/sdk/ts/src/examples/: README.md  helloAdapter.ts  helloAdmin.ts  helloEndpoint.ts  helloTransceiver.ts
evm/sh/: addAdapter.sh  addTransceiver.sh  deployEndpoint.sh  deployRouter.sh  deployTestIntegrator.sh  deployTransparentIntegrator.sh  flatten.sh  receiveTestMessage.sh  sendTestMessage.sh
evm/src/: AdapterRegistry.sol  Endpoint.sol  MessageSequence.sol  Router.sol  TransceiverRegistry.sol
evm/src/interfaces/: IAdapter.sol  IAdapterRegistry.sol  IEndpointAdapter.sol  IEndpointAdmin.sol  IEndpointIntegrator.sol  IMessageSequence.sol  IRouter.sol  IRouterAdmin.sol  IRouterIntegrator.sol  IRouterTransceiver.sol  ITransceiver.sol
evm/src/libraries/: AdapterInstructions.sol  RouterUtils.sol  TransceiverStructs.sol  UniversalAddress.sol
evm/test/: AdapterInstructions.t.sol  AdapterRegistry.t.sol  Endpoint.t.sol  MessageSequence.t.sol  Router.t.sol  RouterUtils.t.sol  TransceiverRegistry.t.sol  UniversalAddress.t.sol
sdk/ts/src/: adapter.ts  admin.ts  helpers.ts
sdk/ts/src/idls/: endpoint.json  endpoint.ts
svm/: Anchor.toml  Cargo.toml  README.md  package-lock.json  package.json
svm/modules/universal-address/: Cargo.toml
svm/modules/universal-address/src/: lib.rs
svm/programs/endpoint/: Cargo.toml  README.md
svm/programs/endpoint/src/: error.rs  event.rs  lib.rs
svm/programs/endpoint/src/instructions/: add_adapter.rs  attest_message.rs  disable_adapter.rs  discard_admin.rs  enable_adapter.rs  exec_message.rs  mod.rs  pick_up_message.rs  recv_message.rs  register.rs  send_message.rs  transfer_admin.rs  update_admin.rs
svm/programs/endpoint/src/instructions/common/: adapter_info_args.rs  mod.rs
svm/programs/endpoint/src/state/: adapter_info.rs  attestation_info.rs  integrator_chain_config.rs  integrator_config.rs  mod.rs  outbox_message.rs  sequence_tracker.rs
svm/programs/endpoint/src/utils/: bitmap.rs
svm/programs/mock-adapter/: Cargo.toml  README.md
svm/programs/mock-adapter/src/: lib.rs
svm/programs/mock-integrator/: Cargo.toml  README.md
svm/programs/mock-integrator/src/: lib.rs
svm/programs/mock-integrator/tests/: add_adapter.rs  add_transceiver.rs  attest_message.rs  disable_adapter.rs  disable_transceiver.rs  disable_transceivers.rs  discard_admin.rs  enable_adapter.rs  enable_transceiver.rs  exec_message.rs  mock_integrator.rs  mod.rs  pick_up_message.rs  recv_message.rs  register.rs  register_transceiver.rs  send_message.rs  set_transceivers.rs  transfer_admin.rs  update_admin.rs
svm/programs/mock-integrator/tests/common/: setup.rs
svm/programs/mock-integrator/tests/instructions/: add_adapter.rs  add_transceiver.rs  attest_message.rs  disable_adapter.rs  disable_transceiver.rs  disable_transceivers.rs  discard_admin.rs  enable_adapter.rs  enable_transceiver.rs  exec_message.rs  mod.rs  pick_up_message.rs  recv_message.rs  register.rs  register_transceiver.rs  send_message.rs  set_transceivers.rs  transfer_admin.rs  update_admin.rs
svm/programs/mock-transceiver/: Cargo.toml  README.md
svm/programs/mock-transceiver/src/: lib.rs
svm/programs/router/: Cargo.toml  README.md
svm/programs/router/benches/: bitmap_benchmark.rs
svm/programs/router/src/: error.rs  lib.rs  state.rs
svm/programs/router/src/instructions/: add_transceiver.rs  attest_message.rs  disable_transceiver.rs  disable_transceivers.rs  discard_admin.rs  enable_transceiver.rs  exec_message.rs  init_integrator_chain_transceivers.rs  initialize.rs  initialize_integrator_chain_transceivers.rs  initialize_integrator_config.rs  mod.rs  pick_up_message.rs  recv_message.rs  register.rs  register_integrator.rs  register_transceiver.rs  send_message.rs  set_transceivers.rs  transfer_admin.rs  transfer_integrator_chain_transceivers_ownership.rs  transfer_integrator_config_ownership.rs  update_admin.rs
svm/programs/router/src/instructions/common/: message.rs  mod.rs  transceiver_info_args.rs
svm/programs/router/src/state/: attestation_info.rs  config.rs  integrator.rs  integrator_chain_config.rs  integrator_chain_transceivers.rs  integrator_config.rs  mod.rs  outbox_message.rs  outbox_message_key.rs  registered_transceiver.rs  transceiver_info.rs
svm/programs/router/src/utils/: bitmap.rs
svm/programs/router/tests/: init_integrator_chain_transceivers.rs  initialize.rs  initialize_integrator_chain_transceivers.rs  initialize_integrator_config.rs  mod.rs  register.rs  register_integrator.rs  register_transceiver.rs  set_transceivers.rs  transfer_integrator_chain_transceivers.rs  transfer_integrator_config_ownership.rs  update_admin.rs
svm/programs/router/tests/common/: execute_transaction.rs  mod.rs  setup.rs
svm/programs/router/tests/instructions/: init_integrator_chain_transceivers.rs  initialize_integrator_chain_transceivers.rs  initialize_integrator_config.rs  mod.rs  register.rs  register_integrator.rs  register_transceiver.rs  set_transceivers.rs  transfer_integrator_chain_transceivers_ownership.rs  transfer_integrator_config_ownership.rs  update_admin.rs
svm/tests/: endpoint.ts  router.ts
