[workspace]
members = [
    "modules/*",
    "programs/*"
]
resolver = "2"

[workspace.dependencies]
anchor-lang = "0.30.1"
solana-program = "1.18.17"
solana-program-test = "1.18.17"
solana-program-runtime = "1.18.17"
solana-sdk = "1.18"
tokio = { version = "1.14.1", features = ["full"] }
bincode = "1.3.3"

[workspace.dependencies.universal-address]
path = "modules/universal-address"

[workspace.dependencies.router]
path = "programs/router"

[workspace.dependencies.mock-integrator]
path = "programs/mock-integrator"

[workspace.dependencies.mock-transceiver]
path = "programs/mock-transceiver"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
