[package]
name = "endpoint"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "endpoint"

[features]
default = ["solana-mainnet"]
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
idl-build = ["anchor-lang/idl-build"]
solana-mainnet = []
solana-devnet = []
solana-localnet = []
test-sbf = ["solana-localnet"]

[dependencies]
anchor-lang = { workspace = true, features = ["init-if-needed", "event-cpi"] }
bitmaps = "3.2.1"
cfg-if = { workspace = true }
universal-address = { workspace = true }

[dev-dependencies]
bincode = { workspace = true }
tokio = { workspace = true }
solana-program-test = { workspace = true }
solana-program-runtime = { workspace = true }
solana-sdk = { workspace = true }
