[package]
name = "mock-adapter"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "mock_adapter"

[features]
default = ["solana-mainnet"]
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
solana-mainnet = []
solana-devnet = []
solana-localnet = []
test-sbf = ["no-entrypoint", "solana-localnet"]


[dependencies]
anchor-lang = { workspace = true }
endpoint = { workspace = true, features = ["cpi"] }
universal-address = { workspace = true }
