[package]
name = "mock-adapter"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "mock_adapter"

[features]
default = ["solana"]
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
solana = []
test-sbf = ["no-entrypoint", "solana"]


[dependencies]
anchor-lang = { workspace = true }
endpoint = { workspace = true, features = ["cpi"] }
