[package]
name = "mock-transceiver"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "mock_transceiver"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
test-sbf = ["no-entrypoint"]

[dependencies]
anchor-lang = { workspace = true }
router = { workspace = true, features = ["cpi"] }
universal-address = { workspace = true }
