[package]
name = "router"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "router"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
test-sbf = []

[dependencies]
anchor-lang =  {version = "0.30.1", features = ["init-if-needed"]}
bitmaps = "3.2.1"
universal-address = { path = "../universal-address" }

[dev-dependencies]
bincode = "1.3.3"
tokio = { version = "1.14.1", features = ["full"] }
solana-program-test = "1.18.17"
solana-sdk = "1.18"
solana-program-runtime = "1.18.17"
